--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://chelciedealmeida.github.io/photo-port",
+  "homepage": "https://chelciedealmeida.github.io/photo-port/",
   "name": "photo-port",
   "version": "0.1.0",
   "private": true,
